# polaris-url-api

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  pyproject.toml  run_local.sh  tox.ini
.circleci/: config.yml  deploy_dev.sh  dhos-url-api.tml  record_build_info.sh  run_integration_tests.sh
.infra/: install-upgrade-dev.sh  install-upgrade-prod.sh
.infra/helm-chart/dhos-url-api/: Chart.yaml  encrypt-dev-secrets.sh  encrypt-prod-secrets.sh  values-az-uk-dev-upstream-api001-secrets-sops.yaml  values-az-uk-dev-upstream-api001.yaml  values-az-uk-nonprod-upstream-api001-secrets-sops.yaml  values-az-uk-nonprod-upstream-api001.yaml  values-az-uk-prod006-secrets-sops.yaml  values-az-uk-prod006.yaml  values.yaml  (+6 more)
dhos_url_api/: __main__.py  app.py
dhos_url_api/blueprint_api/: __init__.py  controller.py
dhos_url_api/blueprint_development/: __init__.py  controller.py
dhos_url_api/helpers/: cli.py  generation.py
dhos_url_api/models/: api_spec.py  short_url.py
dhos_url_api/openapi/: openapi.yaml
docs/: make-targets.py  make_schema.py  schema.dot  schema.plantuml
integration-tests/: Dockerfile  Makefile  README.md  docker-compose.yml  environment.py  reporting.py  requirements.txt
integration-tests/clients/: dhos_url_client.py
integration-tests/features/: url_shortening.feature
integration-tests/steps/: url_steps.py
migrations/versions/: 7bfacc9a5761_static_codes.py  958b37e152a4_.py  9e2d8b7d5b29_.py  a324361c327d_.py  d1ca5a608cc7_.py
tests/: conftest.py  test_api.py  test_openapi.py  test_swagger_ui.py
(+6 files in other folders)
