[tool.poetry]
name = "dhos-url-api"
version = "0.0.1"
description = "URL API for shortening URLs"
authors = ["Rob Grant <rob.grant@sensynehealth.com>"]
keywords = ["URL", "Polaris"]
repository = "https://github.com/polaris-foundation/polaris-url-api"

[tool.poetry.dependencies]
python = "^3.9"
flask-batteries-included = {version = "3.*", extras = ["pgsql", "apispec"]}
validators = "0.*"
she-logging = "1.*"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
coloredlogs = "*"
coverage = "*"
isort = "*"
mock = "*"
mypy = "*"
pytest = "*"
pytest-dhos = {version = "*", extras=["fbi"]}
pytest-flask = "*"
pytest-mock = "*"
requests_mock = "*"
sadisplay = "*"
safety = "*"
tox = "*"
types-PyYAML = "*"

[tool.mypy]
namespace_packages=true
ignore_missing_imports=false
disallow_untyped_defs=true

[[tool.mypy.overrides]]
module = [
    "requests_mock",
    "pytest",
    "environs",
    "jose",
    "waitress",
    "connexion",
    "pytest_mock",
    "apispec.*",
    "apispec_webframeworks.*",
    "sadisplay",
    "validators.*"
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
known_third_party = ["alembic", "apispec", "apispec_webframeworks", "behave", "click", "clients", "connexion", "environs", "faker", "flask", "flask_batteries_included", "marshmallow", "pytest", "reporting", "reportportal_behave", "requests", "sadisplay", "she_logging", "sqlalchemy", "validators", "waitress", "yaml"]

[tool.black]
line-length = 88
target-version = ["py39"]
